--- a/UI/UnoGoodReads/UnoGoodReads/UnoGoodReads.Shared/MainPage.xaml
+++ b/UI/UnoGoodReads/UnoGoodReads/UnoGoodReads.Shared/MainPage.xaml
@@ -1,33 +1,53 @@
-﻿<Page
-    x:Class="UnoGoodReads.MainPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:UnoGoodReads"
-	xmlns:winui="using:Microsoft.UI.Xaml.Controls"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+﻿<Page x:Class="UnoGoodReads.MainPage"
+	  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	  xmlns:local="using:UnoGoodReads"
+	  xmlns:winui="using:Microsoft.UI.Xaml.Controls"
+	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	  xmlns:pages="using:UnoGoodReads.Views"
+	  xmlns:vm="using:UnoGoodReads.ViewModels"
+	  mc:Ignorable="d"
+	  xmlns:utu="using:Uno.Toolkit.UI"
+	  xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
+	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-	<winui:TabView x:Name="tabView"
-                    Margin="0,35"
-                    Style="{StaticResource TabViewStyle}">
-		<winui:TabView.TabItems>
-			<winui:TabViewItem Icon="Home"
-					  x:Name="Home"
-					  Header="Home">
-				<winui:TabViewItem.Content>
-					
+	<muxc:TabView x:Name="tabView"
+				  Margin="0,35">
+		<muxc:TabView.TabItems>
+			<muxc:TabViewItem Header="Home">
+				<muxc:TabViewItem.IconSource>
+					<muxc:SymbolIconSource Symbol="Home" />
+				</muxc:TabViewItem.IconSource>
 
-				</winui:TabViewItem.Content>
+				<muxc:TabViewItem.Content>
+					<pages:HomePage/>
+				</muxc:TabViewItem.Content>
+			</muxc:TabViewItem>
 
-			</winui:TabViewItem>
+			<muxc:TabViewItem Header="Author">
+				<muxc:TabViewItem.IconSource>
+					<muxc:SymbolIconSource Symbol="Contact" />
+				</muxc:TabViewItem.IconSource>
 
-		</winui:TabView.TabItems>
+				<muxc:TabViewItem.Content>
+					<pages:AuthorPage />
+				</muxc:TabViewItem.Content>
+			</muxc:TabViewItem>
 
-	</winui:TabView>
+			<muxc:TabViewItem Header="Book">
+				<muxc:TabViewItem.IconSource>
+					<muxc:SymbolIconSource Symbol="Document" />
+				</muxc:TabViewItem.IconSource>
 
-	<NavigationView SelectionFollowsFocus="Enabled"
+				<muxc:TabViewItem.Content>
+					<pages:BookPage/>
+				</muxc:TabViewItem.Content>
+			</muxc:TabViewItem>
+		</muxc:TabView.TabItems>
+	</muxc:TabView>
+
+	<!--<NavigationView SelectionFollowsFocus="Enabled"
 				 SelectionChanged="NavigationView_SelectionChanged"
 					ItemInvoked="NavigationView_ItemInvoked">
 		<NavigationView.MenuItems>
@@ -46,5 +66,5 @@
 		</NavigationView.MenuItems>
 		<Frame x:Name="contentFrame" />
 
-	</NavigationView>
+	</NavigationView>-->
 </Page>
