--- a/UI/SimpleCalculator/SimpleCalculator.UI/Styles/ColorPaletteOverride.xaml
+++ b/UI/SimpleCalculator/SimpleCalculator.UI/Styles/ColorPaletteOverride.xaml
@@ -3,59 +3,70 @@
 	<ResourceDictionary.ThemeDictionaries>
 		<!-- Light Theme -->
 		<ResourceDictionary x:Key="Light">
-
-			<Color x:Key="PrimaryColor">#5B4CF5</Color>
-			<Color x:Key="SecondaryColor">#67E5AD</Color>
-			<Color x:Key="BackgroundColor">#F4F4F4</Color>
-			<Color x:Key="SurfaceColor">#FFFFFF</Color>
-			<Color x:Key="OnSurfaceColor">#000000</Color>
-			<Color x:Key="ErrorColor">#F85977</Color>
-
-			<!-- OnPrimary -->
-			<Color x:Key="OnPrimaryColor">#FFFFFF</Color>
-
-			<!-- OnSecondary -->
-			<Color x:Key="OnSecondaryColor">#000000</Color>
-
-			<!-- OnBackground -->
-			<Color x:Key="OnBackgroundColor">#000000</Color>
-
-			<!-- OnError -->
-			<Color x:Key="OnErrorColor">#FFFFFF</Color>
-		</ResourceDictionary>
+            <Color x:Key="StatusBarForegroundColor">#000000</Color>
+            <Color x:Key="BackgroundColor">#F1F2F3</Color>
+            <Color x:Key="SurfaceColor">#FFFFFF</Color>
+            <Color x:Key="OnPrimaryColor">#FFFFFF</Color>
+            <Color x:Key="SecondaryColor">#D2D3DA</Color>
+            <Color x:Key="PrimaryVariantLightColor">#9679FF</Color>
+            <Color x:Key="PrimaryColor">#5946D2</Color>
+            <Color x:Key="OnSecondaryContainerColor">#1B192C</Color>
+            <Color x:Key="OnBackgroundColor">#1C1B1F</Color>
+            <Color x:Key="OnTertiaryColor">#FFFFFF</Color>
+            <Color x:Key="TertiaryColor">#4B5EFC</Color>
+            <Color x:Key="OnSurfaceColor">#1C1B1F</Color>
+            <Color x:Key="PrimaryInverseColor">#C8BFFF</Color>
+            <Color x:Key="PrimaryContainerColor">#E5DEFF</Color>
+            <Color x:Key="OnPrimaryContainerColor">#160067</Color>
+            <Color x:Key="PrimaryVariantDarkColor">#0021C1</Color>
+            <Color x:Key="SecondaryVariantDarkColor">#2BB27E</Color>
+            <Color x:Key="SecondaryVariantLightColor">#9CFFDF</Color>
+            <Color x:Key="OnSecondaryColor">#FFFFFF</Color>
+            <Color x:Key="SecondaryContainerColor">#E5DFF9</Color>
+            <Color x:Key="SurfaceInverseColor">#313033</Color>
+            <Color x:Key="OnSurfaceInverseColor">#F4EFF4</Color>
+            <Color x:Key="SurfaceVariantColor">#F2EFF5</Color>
+            <Color x:Key="OnSurfaceVariantColor">#8A8494</Color>
+            <Color x:Key="OutlineColor">#79747E</Color>
+            <Color x:Key="ErrorColor">#B3261E</Color>
+            <Color x:Key="OnErrorColor">#FFFFFF</Color>
+            <Color x:Key="ErrorContainerColor">#F9DEDC</Color>
+            <Color x:Key="OnErrorContainerColor">#410E0B</Color>
+            <Color x:Key="TertiaryContainerColor">#CFE4FF</Color>
+            <Color x:Key="OnTertiaryContainerColor">#001D36</Color>
+        </ResourceDictionary>
 
 		<!-- Dark Theme -->
 		<ResourceDictionary x:Key="Dark">
-			<!-- Primary -->
-			<Color x:Key="PrimaryColor">#2F81D8</Color>
-
-			<!-- OnPrimary -->
-			<Color x:Key="OnPrimaryColor">#FFFFFF</Color>
-
-			<!-- Secondary -->
-			<Color x:Key="SecondaryColor">#FEB839</Color>
-
-			<!-- OnSecondary -->
-			<Color x:Key="OnSecondaryColor">#000000</Color>
-
-			<!-- Background -->
-			<Color x:Key="BackgroundColor">#000000</Color>
-
-			<!-- OnBackground -->
-			<Color x:Key="OnBackgroundColor">#FFFFFF</Color>
-
-			<!-- Surface -->
-			<Color x:Key="SurfaceColor">#0F0F0F</Color>
-
-			<!-- OnSurface -->
-			<Color x:Key="OnSurfaceColor">#FFFFFF</Color>
-
-			<!-- Error -->
-			<Color x:Key="ErrorColor">#B2213C</Color>
-
-			<!-- OnError -->
-			<Color x:Key="OnErrorColor">#FFFFFF</Color>
-		</ResourceDictionary>
+            <Color x:Key="PrimaryColor">#544794</Color>
+            <Color x:Key="PrimaryInverseColor">#5946D2</Color>
+            <Color x:Key="OnPrimaryColor">#FFFFFF</Color>
+            <Color x:Key="PrimaryContainerColor">#4128BA</Color>
+            <Color x:Key="OnPrimaryContainerColor">#E5DEFF</Color>
+            <Color x:Key="PrimaryVariantLightColor">#C8BFFF</Color>
+            <Color x:Key="PrimaryVariantDarkColor">#4128BA</Color>
+            <Color x:Key="SecondaryColor">#4E505F</Color>
+            <Color x:Key="OnSecondaryColor">#003823</Color>
+            <Color x:Key="SecondaryContainerColor">#474459</Color>
+            <Color x:Key="OnSecondaryContainerColor">#E5DFF9</Color>
+            <Color x:Key="BackgroundColor">#17171C</Color>
+            <Color x:Key="OnBackgroundColor">#E6E1E5</Color>
+            <Color x:Key="SurfaceColor">#2E2F38</Color>
+            <Color x:Key="SurfaceInverseColor">#E6E1E5</Color>
+            <Color x:Key="SurfaceVariantColor">#49454F</Color>
+            <Color x:Key="OnSurfaceColor">#E6E1E5</Color>
+            <Color x:Key="OnSurfaceInverseColor">#1C1B1F</Color>
+            <Color x:Key="OnSurfaceVariantColor">#CAC4D0</Color>
+            <Color x:Key="OutlineColor">#938F99</Color>
+            <Color x:Key="ErrorColor">#F2B8B5</Color>
+            <Color x:Key="OnErrorColor">#601410</Color>
+            <Color x:Key="ErrorContainerColor">#8C1D18</Color>
+            <Color x:Key="OnErrorContainerColor">#F9DEDC</Color>
+            <Color x:Key="TertiaryColor">#4B5EFC</Color>
+            <Color x:Key="OnTertiaryColor">#003259</Color>
+            <Color x:Key="OnTertiaryContainerColor">#CFE4FF</Color>
+            <Color x:Key="TertiaryContainerColor">#00497E</Color>
+        </ResourceDictionary>
 
 	</ResourceDictionary.ThemeDictionaries>
 
