--- a/UI/SimpleCalculator/SimpleCalculator.UI/Views/MainPage.xaml
+++ b/UI/SimpleCalculator/SimpleCalculator.UI/Views/MainPage.xaml
@@ -2,13 +2,15 @@
 	  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	  xmlns:local="using:SimpleCalculator.Views"
+      xmlns:keyboard="using:SimpleCalculator.Keyboard"
 	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	  mc:Ignorable="d"
 	  xmlns:uen="using:Uno.Extensions.Navigation.UI"
 	  xmlns:utu="using:Uno.Toolkit.UI"
 	  xmlns:not_skia="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	  Background="{ThemeResource BackgroundBrush}">
+	  Background="{ThemeResource BackgroundBrush}"
+      keyboard:KeyboardBehavior.KeyUpCommand="{Binding KeyboardInput}">
 
     <utu:AutoLayout Background="{ThemeResource SurfaceBrush}">
         <ToggleSwitch Margin="8" utu:AutoLayout.CounterAlignment="Center" />
