chore: safearea on xaml and cs4m

--- a/UI/SimpleCalculator/SimpleCalculator.UI/Views/MainPage.xaml
+++ b/UI/SimpleCalculator/SimpleCalculator.UI/Views/MainPage.xaml
@@ -12,7 +12,7 @@
 	  Background="{ThemeResource BackgroundBrush}"
       keyboard:KeyboardBehavior.KeyUpCommand="{Binding KeyboardInput}">
 
-    <utu:AutoLayout Background="{ThemeResource SurfaceBrush}">
+    <utu:AutoLayout utu:SafeArea.Insets="VisibleBounds" Background="{ThemeResource SurfaceBrush}">
         <ToggleSwitch Margin="8" utu:AutoLayout.CounterAlignment="Center" />
         <utu:AutoLayout Spacing="8" Padding="8" PrimaryAxisAlignment="End" utu:AutoLayout.PrimaryAlignment="Stretch">
             <TextBlock Text="{Binding Calculator.Equation}" utu:AutoLayout.CounterAlignment="End" Foreground="{ThemeResource OnSecondaryContainerBrush}" />
