ci: Remove unused dependencies

--- a/UI/SimpleCalculator/SimpleCalculator.UI/Views/MainPage.xaml
+++ b/UI/SimpleCalculator/SimpleCalculator.UI/Views/MainPage.xaml
@@ -9,8 +9,7 @@
 	  xmlns:uen="using:Uno.Extensions.Navigation.UI"
 	  xmlns:utu="using:Uno.Toolkit.UI"
 	  xmlns:not_skia="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	  Background="{ThemeResource BackgroundBrush}"
-      keyboard:KeyboardBehavior.KeyUpCommand="{Binding KeyboardInput}">
+	  Background="{ThemeResource BackgroundBrush}">
 
     <utu:AutoLayout utu:SafeArea.Insets="VisibleBounds" Background="{ThemeResource SurfaceBrush}">
         <ToggleSwitch Margin="8" utu:AutoLayout.CounterAlignment="Center" />
