--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/Pages/DataGrid/LocationsPage.xaml
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/Pages/DataGrid/LocationsPage.xaml
@@ -1,10 +1,10 @@
-﻿<ctrl:Page x:Class="WCTDataTreeTabSample.LocationsPage"
+﻿<mux:Page x:Class="WCTDataTreeTabSample.LocationsPage"
 	  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	  xmlns:toolkit="using:CommunityToolkit.WinUI.UI.Controls"
-      xmlns:ctrl="using:Uno.CommunityToolkit.WinUI.UI.Controls"      
+	  xmlns:toolkit="using:CommunityToolkit.WinUI.UI.Controls" 
+      xmlns:mux="using:Microsoft.UI.Xaml.Controls"       
 	  mc:Ignorable="d">
 
 	<Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
@@ -27,4 +27,4 @@
 			</toolkit:DataGrid.Columns>
 		</toolkit:DataGrid>
 	</Grid>
-</ctrl:Page>
+</mux:Page>
